--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>zum checken der JS Daten gehe in die Console</p>
+    <p>Check console for JS output</p>
 </body>
 <script src="timers-exercise.js"></script>
 </html>
